Word matching with the GameWord

--- a/src/app/Components/word/word.component.html
+++ b/src/app/Components/word/word.component.html
@@ -1,5 +1,5 @@
 <div class="main-component">
     <div class="letter-array" *ngFor="let letter of letters">
-        <app-letter [letter]="letter"></app-letter>
+        <app-letter [letter]="letter" [active]="active"></app-letter>
     </div>
 </div>
