Services functions linked

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <div>Game word: {{[[gameWord]]}}</div>
 <div>Game state: {{[[gameState]]}}</div>
 <div>Timestamp: {{dateTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
-<app-word #word></app-word>
+<app-word #word (errorInput)="errorInputWord($event)"></app-word>
+<div>{{[[errorMsg]]}}</div>
