--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,9 @@
 <div>Game word: {{[[gameWord]]}}</div>
 <div>Game state: {{[[gameState]]}}</div>
 <div>Timestamp: {{dateTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
-<app-word #word (errorInput)="errorInputWord($event)"></app-word>
-<div>{{[[errorMsg]]}}</div>
+<div class="main-container">
+    <div class="words-container" *ngFor="let index of [0,1,2,3,4,5]">
+        <app-word #word class="word" (errorInput)="errorInputWord($event)"></app-word>
+    </div>
+    <div class="error-msg">{{[[errorMsg]]}}</div>
+</div>
