--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,18 @@
-
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
     font-family: Arial;
-  }
-  
-  .grid {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    flex-grow: 1;
-    grid-template-columns: repeat(5, 4em);
-    grid-template-rows: repeat(6, 4em);
-    gap: .25em;
-    margin-bottom: 1em;
-  }
-  .tile {
-    font-size: 2em;
-    color: white;
-    border: .05em solid hsl(240, 2%, 23%);
-    text-transform: uppercase;
-    font-weight: bold;
+}
+
+.main-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    user-select: none;
-    transition: transform 250ms linear;
-  }
+
+    .words-container {
+        .word {}
+    }
+
+    .error-msg {}
+}
