--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
 <div>Game state: {{[[gameState]]}}</div>
 <div>Timestamp: {{dateTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
 <div data-guess-grid class="main-container">
-    <div class="words-container" *ngFor="let index of [0,1,2,3,4,5]">
-        <app-word #word class="word" (errorInput)="errorInputWord($event)"></app-word>
+    <div class="words-container" *ngFor="let index of [].constructor(totalWords)">
+        <app-word #word class="word" (errorInput)="errorInputWord($event)" (validInput)="validInputWord($event)">
+        </app-word>
     </div>
     <div class="error-msg">{{[[errorMsg]]}}</div>
     <app-keyboard></app-keyboard>
