Keyboard events redirected

--- a/src/app/Components/letter/letter.component.html
+++ b/src/app/Components/letter/letter.component.html
@@ -1,4 +1,5 @@
 <div class="main"
-    [ngClass]="letter.state===0?'white':letter.state===1?'green':letter.state===2?'yellow':letter.state===3?'grey':''">
+    [ngClass]="letter.state===0?'white':letter.state===1?'green':letter.state===2?'yellow':letter.state===3?'grey':''"
+    (click)="onClick($event)">
     {{[[letter.character]]}}
 </div>
