--- a/src/app/Components/keyboard/keyboard.component.html
+++ b/src/app/Components/keyboard/keyboard.component.html
@@ -1,37 +1,39 @@
-<link rel="stylesheet" href="keyboard.component.scss">
 <div data-keyboard class="keyboard">
-    <button class="key wrong" data-key="Q">Q</button>
-    <button class="key wrong-location" data-key="W">W</button>
-    <button class="key correct" data-key="E">E</button>
-    <button class="key" data-key="R">R</button>
-    <button class="key" data-key="T">T</button>
-    <button class="key" data-key="Y">Y</button>
-    <button class="key" data-key="U">U</button>
-    <button class="key" data-key="I">I</button>
-    <button class="key" data-key="O">O</button>
-    <button class="key" data-key="P">P</button>
-    <div class="space"></div> 
-    <button class="key" data-key="A">A</button>
-    <button class="key" data-key="S">S</button>
-    <button class="key" data-key="D">D</button>
-    <button class="key" data-key="F">F</button>
-    <button class="key" data-key="G">G</button>
-    <button class="key" data-key="H">H</button>
-    <button class="key" data-key="J">J</button>
-    <button class="key" data-key="K">K</button>
-    <button class="key" data-key="L">L</button>
-    <div class="space"></div>
-    <button data-enter class="key large">Enter</button>
-    <button class="key" data-key="Z">Z</button>
-    <button class="key" data-key="X">X</button>
-    <button class="key" data-key="C">C</button>
-    <button class="key" data-key="V">V</button>
-    <button class="key" data-key="B">B</button>
-    <button class="key" data-key="N">N</button>
-    <button class="key" data-key="M">M</button>
-    <button data-delete class="key large">
-      <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-        <path fill="var(--color-tone-1)" d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H7.07L2.4 12l4.66-7H22v14zm-11.59-2L14 13.41 17.59 17 19 15.59 15.41 12 19 8.41 17.59 7 14 10.59 10.41 7 9 8.41 12.59 12 9 15.59z"></path>
-      </svg>
-    </button>
-  </div>
+  <app-letter class="key" value="Q" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="W" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="E" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="R" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="T" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="Y" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="U" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="I" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="O" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="P" (keyPress)="keyPressed($event)"></app-letter>
+  <div class="space"></div>
+  <app-letter class="key" value="A" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="S" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="D" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="F" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="G" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="H" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="J" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="K" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="L" (keyPress)="keyPressed($event)"></app-letter>
+  <div class="space"></div>
+  <app-letter data-enter class="key large" value="Enter" (keyPress)="keyPressed('Enter')"></app-letter>
+  <app-letter class="key" value="Z" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="X" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="C" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="V" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="B" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="N" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter class="key" value="M" (keyPress)="keyPressed($event)"></app-letter>
+  <app-letter data-delete class="key large">
+    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+      <path fill="var(--color-tone-1)"
+        d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H7.07L2.4 12l4.66-7H22v14zm-11.59-2L14 13.41 17.59 17 19 15.59 15.41 12 19 8.41 17.59 7 14 10.59 10.41 7 9 8.41 12.59 12 9 15.59z">
+      </path>
+    </svg>
+    (keyPress)="keyPressed($event)">
+  </app-letter>
+</div>
