--- a/src/app/Components/keyboard/keyboard.component.scss
+++ b/src/app/Components/keyboard/keyboard.component.scss
@@ -1,57 +1,19 @@
 .keyboard {
-    display: grid;
-    grid-template-columns: repeat(20, minmax(auto, 1.25em));
-    grid-auto-rows: 3em;
-    gap: .25em;
-    justify-content: center;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(20, minmax(0.5em, 1em));
+  grid-auto-rows: 3em;
+  gap: 1em;
+  justify-content: center;
+
   .key {
-    font-size: inherit;
+    padding: 5px;
     grid-column: span 2;
-    border: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: hsl(
-      var(--hue, 200),
-      var(--saturation, 1%),
-      calc(var(--lightness-offset, 0%) + var(--lightness, 51%))
-    );
-    color: white;
-    fill: white;
-    text-transform: uppercase;
-    border-radius: .25em;
-    cursor: pointer;
-    user-select: none;
-  }
-  
-  .key.large {
-    grid-column: span 3;
-  }
-  
-  .key > svg { /* Scale up back button*/
-    width: 1.75em;
-    height: 1.75em;
-  }
-  
-  .key:hover, .key:focus { /* Button is 10% lighter when ever I hover on it*/
-    --lightness-offset: 10%;
-  }
-  .key.wrong { /*Color for a wrong letter*/
-    --lightness: 23%;
+    background-color: pink;
   }
 
-  .key.wrong-location {
-    --hue: 49;
-    --saturation: 51%;
-    --lightness: 47%;
+  .large {
+    width: 90PX;
+    background-color: aqua;
+    grid-column: span 3;
   }
-  
-  .key.correct {
-    --hue: 115;
-    --saturation: 29%;
-    --lightness: 43%;
-  }
-  
+}
