--- a/src/app/Components/letter/letter.component.scss
+++ b/src/app/Components/letter/letter.component.scss
@@ -1,7 +1,7 @@
 .main {
-    width: 30px;
-    height: 30px;
-    font-size: 30px;
+    font-size: inherit;
+    width: inherit;
+    height: inherit;
     font-family: Arial;
     font-weight: 600;
     color: rgb(58, 69, 69);
