--- a/src/app/Components/word/word.component.scss
+++ b/src/app/Components/word/word.component.scss
@@ -3,8 +3,15 @@
     flex: 1;
     display: flex;
     flex-direction: row;
+
     .letter-array {
         margin-left: 5px;
         margin-right: 5px;
+
+        .letter {
+            width: 30px;
+            height: 30px;
+            font-size: 30px;
+        }
     }
 }
