--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
-<hr> 
+<hr>
 <br>
 <link rel="stylesheet" href="app.component.scss">
 <h2>Master game component. Work in progress</h2>
@@ -12,5 +12,5 @@
         </app-word>
     </div>
     <div class="error-msg">{{[[errorMsg]]}}</div>
-    <app-keyboard (keyPress)="keyPress($event)"></app-keyboard>
+    <app-keyboard [referenceLetters]="referenceLetters" (keyPress)="keyPress($event)"></app-keyboard>
 </div>
