Added gql for validate and request word and some comestic changes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,8 @@
 
     .error-msg {
         height: 20px;
+        font-size: large;
+        font-weight: bolder;
     }
     .good {
         color: rgb(153, 206, 73);
