--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div data-guess-grid class="main-container">
-    <h1>{{title}} - {{gameWord}}</h1>
+    <h1>{{title}}</h1>
     <div class="error-msg" [ngClass]="gameState===1?'good':'bad'">{{[[errorMsg]]}}</div>
     <hr>
     <br>
