--- a/src/app/Components/letter/letter.component.scss
+++ b/src/app/Components/letter/letter.component.scss
@@ -2,7 +2,7 @@
     font-size: inherit;
     width: inherit;
     height: inherit;
-    font-family: Arial;
+    font-family: cursive;
     font-weight: 600;
     color: rgb(58, 69, 69);
     padding: 10px;
