Basic UI modifications

--- a/src/app/Components/letter/letter.component.scss
+++ b/src/app/Components/letter/letter.component.scss
@@ -5,7 +5,7 @@
     font-family: cursive;
     font-weight: 600;
     color: rgb(58, 69, 69);
-    padding: 10px;
+    padding: 2px 10px 10px 5px;
     text-align: center;
     border-radius: 5px;
     border-color: slategrey;
