--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
 
     .words-container {
         .word {}
@@ -19,6 +20,7 @@
         font-size: large;
         font-weight: bolder;
     }
+
     .good {
         color: rgb(153, 206, 73);
     }
@@ -31,5 +33,5 @@
 }
 
 hr {
-    width: 700px;
+    width: 80%;
 }
